--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,14 +17,26 @@ body{
 	width: 100%
 }
 
-.wrapper{
-
-}
-
 section{
 	padding-top: 50px;
 	padding-bottom: 50px;
+	font-family: 'Kanit', sans-serif;
 }
+.section-title{
+	padding-bottom: 20px;
+}
+.section-title h2{
+	font-size: 2.25rem;	
+}
+.section-title label{
+	font-size: 16px;
+	color: #999999;
+}
+
+a, a:hover{
+	color: unset;
+}
+
 .btn{
 	font-size: 14px;
 }
@@ -35,6 +47,10 @@ section{
 .btn-blu{
 	background-color: #1595d5;
 	color: #ffffff;
+}
+hr.line-title{
+	border-bottom: 4px solid #fbcc56;
+	width: 60px;
 }
 /*==========================*/
 /* HEADER */
@@ -71,6 +87,37 @@ section{
 	transition: 0.3s;
 }
 
+/*------ SIDE NAV ------*/
+.sidenav .list-group-item{
+	border: none;
+	border-top: 1px dotted rgba(0,0,0,.125);
+	border-bottom: 1px dotted rgba(0,0,0,.125);
+	transition: 0.3s;
+}
+.list-group-item:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;  
+  font-size: 20px;
+  top: 7px;
+  right: -20px;
+  transition: 0.5s;
+}
+.list-group-item:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+.sidenav .list-group-item:hover{
+	background-color: #f0f8ff;
+}
+.sidenav .side-nav-link{
+	color: #333333;
+}
+.sidenav .side-nav-link:hover{
+	color: #333333;
+	text-decoration: none;
+}
+
 /*==========================*/
 /* CONTENT */
 /*==========================*/
@@ -80,7 +127,7 @@ section{
 .head-sub-page {
   background-image: url("../images/sub-page-bg.png");
   background-color: #cccccc;
-  height: 400px;
+  height: 320px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,6 +141,11 @@ section{
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+}
+
+.head-sub-page .hero-text h1{
+	font-weight: 400;
+	font-size: 2.75rem;
 }
 
 /*------ SLIDER ------*/
@@ -140,9 +192,7 @@ section{
 }
 
 /*------ ABOUT US SECTION ------*/
-.about-section{
 
-}
 .about-section h1.about-title{
 	color: #0d79bc;
 	font-size: 1.75rem;
@@ -150,6 +200,7 @@ section{
 .about-section .about-sub-title{
 	font-size: 1.25rem;
 }
+
 /*------ CHOOSE US SECTION ------*/
 .choose-us-section{
 	background-color: #f9f9fa;
@@ -157,7 +208,8 @@ section{
 .choose-us-section .card{
 	background-color: transparent;
 	border: none;
-	padding-bottom: 30px;
+	padding-top: 15px;
+    padding-bottom: 15px;
 }
 .choose-us-section .card-icon{
 	margin-bottom: 15px;
@@ -172,6 +224,7 @@ section{
     line-height: 50px;
     border-radius: 100%;
 }
+
 /*------ CHOOSE US SECTION ------*/
 .contact-section{
 	background-image: url("../images/bg-contact.jpg");
@@ -181,7 +234,6 @@ section{
   	background-size: cover;
   	position: relative;
 }
-
 .contact-section .hero-text {
   	text-align: center;
   	position: absolute;
@@ -207,6 +259,152 @@ section{
 	font-size: 14px;
 	font-weight: 300;
 }
+
+/*------ PACKAGE ------*/
+.price-table-layout {
+  	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+  	display: flex;
+	-webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  	margin:0 auto;
+}
+.listing-item {
+   display: block;
+   width:100%;
+	margin-bottom:20px;
+    float: left;
+    background: #fff;
+    z-index:0;
+	cursor:pointer;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+	-webkit-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.10);
+    -moz-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.10);
+}
+.listing-item:hover{
+	-webkit-transform: scale(1.03);
+	-moz-transform: scale(1.03);
+    transform: scale(1.03);
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+    transition: all 0.3s;
+	z-index:2;
+	-webkit-box-shadow: 0px 8px 20px 2px rgba(0, 0, 0, 0.10);
+	-moz-box-shadow:0px 8px 20px 2px rgba(0, 0, 0, 0.10);;
+	box-shadow: 0px 8px 20px 2px rgba(0, 0, 0, 0.10);
+}
+.pt-head{
+	background-color: transparent;
+    color: #ffffff;
+    text-align: center;
+    position:relative;
+}
+.pt-head:before{
+    content: "";
+    position: absolute;
+    bottom: -9px;
+    left: -o-calc(50% - 15px);
+    left: -moz-calc(50% - 15px);
+    left: -webkit-calc(50% - 15px);
+    left: calc(50% - 15px);;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+.pt-head .title-package{
+	font-size: 18px;
+    padding: 10px 0px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+.pt-head .price-package{
+	padding: 5px 10px;
+}
+.pt-head .price-package .currency{
+	font-size: 50px;
+}
+.pt-head .price-package .month{
+	margin-top: -12px;
+}
+.bg-blue{
+	background-color: #1bafea;
+}
+.pt-head.bg-blue:before{
+	border-top: 10px solid #1bafea;
+}
+.bg-green{
+	background-color: #45d652;
+}
+.pt-head.bg-green:before{
+	border-top: 10px solid #45d652;
+}
+.bg-orange{
+	background-color: #ff9933;
+}
+.pt-head.bg-orange:before{
+	border-top: 10px solid #ff9933;
+}
+.bg-pink{
+	background-color: #ff3399;
+}
+.pt-head.bg-pink:before{
+	border-top: 10px solid #ff3399;
+}
+.pt-detail{
+	list-style-type: none;
+	padding: 15px 30px 10px 30px;
+	text-align: center;
+	margin-bottom: 0px;
+	color: #808080;
+}
+.pt-detail li{
+	padding: 10px 10px;
+}
+.pt-detail li:not(:last-child){
+	border-bottom: 1px solid #cccccc;
+}
+.pt-btn-order{
+	text-align: center;
+	padding: 15px 10px;
+}
+.pt-btn-order a{
+	color: #ffffff;
+}
+
+/*------ CLIENT ------*/
+ul.cl-list{
+	display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; list-style: none;
+    padding-left: 0px;
+}
+.cl-list li.cl-item{
+	border: 1px solid #cccccc;
+	width: 190px;
+    margin: 10px;
+}
+
+/*------ TABS ------*/
+.tab-content{
+	padding: 25px;
+	border: 1px solid transparent;
+	border-color: #fff #dee2e6 #dee2e6;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+	border-top: 3px solid #fbcc56;
+}
+.nav-tabs .nav-link{
+	background-color: #dee2e6;
+	border-top-left-radius: 0rem;
+    border-top-right-radius: 0rem;
+}
+
 
 /*------ FOOTER ------*/
 
@@ -302,3 +500,4 @@ footer .footer-middle .ft-title{
 /*==========================*/
 /* RESPONSIVE*/
 /*==========================*/
+
